<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.liquorade.randomcocktail.RandomCocktailViewModel" />
    </data>

    <ScrollView
        android:id="@+id/random_cocktail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/random_cocktail_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/random_cocktail_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/random_cocktail_button"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/random_cocktail"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/random_cocktail_name"
                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@{viewModel.randomCocktail.strDrink}" />

                <ImageView
                    android:id="@+id/random_cocktail_image"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="8dp"
                    android:scaleType="centerCrop"
                    app:imageUrlRounded="@{viewModel.randomCocktail.strDrinkThumb}" />

                <LinearLayout
                    android:id="@+id/random_cocktail_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:id="@+id/random_cocktail_category_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/random_cocktail_category_title"
                            style="@style/SmallTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/random_cocktail_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{viewModel.randomCocktail.strCategory}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/random_cocktail_glass_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/random_cocktail_glass_title"
                            style="@style/SmallTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/serving_glass" />

                        <TextView
                            android:id="@+id/random_cocktail_glass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{viewModel.randomCocktail.strGlass}" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/random_cocktail_ingredients_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:theme="@style/IngredientListStyle">

                    <TextView
                        android:id="@+id/random_cocktail_ingredients_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:textSize="20sp" />

                    <com.example.liquorade.util.NonScrollListView
                        android:id="@+id/random_cocktail_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/random_cocktail_instructions_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:theme="@style/PaddingStyle">

                    <TextView
                        android:id="@+id/random_cocktail_instructions_title"
                        style="@style/SmallTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions" />

                    <TextView
                        android:id="@+id/random_cocktail_instructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.randomCocktail.strInstructions}" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                app:cocktailApiStatus="@{viewModel.status}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/status_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>